<resources>
    <string name="app_name">skibuddy</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_sign_out">Sign Out</string>

    <!-- Google Sign In Sample -->
    <!-- Sign-in status messages -->
    <string name="title_text">Sign in with your Google account</string>

    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_in">Signed in</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <string name="loading">Loading...</string>

    <!--Server-ClientId-->
    <string name="server_client_id">538923068949-7omlgmdftfnht7l4s2s2oog77kngecr5.apps.googleusercontent.com</string>
    <!--<string name="server_url">https://skibuddy-api.herokuapp.com</string>-->
    <string name="server_url">http://10.0.2.2:9000</string>

    <string name="title_activity_home">Home</string>

    <string name="contacts_permission_rationale">contacts_permission_rationale</string>

    <string name="id_token_fmt">ID Token: %s</string>


    <!-- Profile screen -->
    <string name="your_records">Your Records</string>
    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string name="distance">Distance:</string>
    <string name="title_activity_maps">Map</string>

    <!-- Event screen -->
    <string name="owned_event">Owned Events</string>
    <string name="accepted_event">Accepted Events</string>
    <string name="waiting_event">Waiting Events</string>

</resources>
