<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cmpe277.skibuddy.EventFragment">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_add"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/add">

        <!-- Owned Events 0-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/owned_event"
            android:textColor="@color/blue_grey_700"
            android:textStyle="bold"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/list_view_owned"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fcf8e2"/>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:paddingTop="@dimen/activity_vertical_margin"/>

        <!-- Accepted Events 2-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/accepted_event"
            android:textColor="@color/blue_grey_700"
            android:textStyle="bold"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/list_view_accepted"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fbfbb6"/>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:paddingTop="@dimen/activity_vertical_margin"/>

        <!-- Waiting Events 1-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/waiting_event"
            android:textColor="@color/blue_grey_700"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <ListView
            android:id="@+id/list_view_waiting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f6e561" />

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:paddingTop="@dimen/activity_vertical_margin"/>

    </LinearLayout>

</RelativeLayout>
